--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 </div>
 
                 <div id="content">
-
+                    <div id="genres">
+                        
+                    </div>
                 </div>
 
             </div>
