debug sezione principale

--- a/index.html
+++ b/index.html
@@ -19,12 +19,86 @@
     
                 </div>
 
-                <div id="content">
-                    <div id="genres">
-                        
-                    </div>
+                <div id="genres">
+
                 </div>
 
+                <div id="content">
+                    <!--sezione Recently Played-->
+                    <section>
+                        <h3>Recently played</h3>
+                        <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                            </div>
+                        </div>    
+                    </section>
+                    <!--sezione Recently Played-->
+                    <section>
+                        <h3>Recently played</h3>
+                        <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                            </div>
+                        </div>    
+                    </section>
+                    <!--sezione Recently Played-->
+                    <section>
+                        <h3>Recently played</h3>
+                        <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                                <div class="card">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <h4>heavy Metal</h4>
+                                    <span>Subtitle</span>
+                                </div>
+                            </div>
+                        </div>    
+                    </section>
+                </div>
             </div>
         </div>
     </main>
