inserisci comportamento tablet nel main

--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
     </main>
 
     <footer>
-        <div id="left">
+        <div id="footer-container">
+            <div id="left">
 
-        </div>
+            </div>
 
-        <div id="mid">
+            <div id="mid">
 
-        </div>
+            </div>
 
-        <div id="right">
+            <div id="right">
 
+            </div>
         </div>
 
     </footer>
