--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
 
             <div id="main">
                 <div id="call-to">
-    
+                    <a href="" id="upgrade-btn">EFFETTUA L'UPGRADE</a>
                 </div>
 
                 <div id="genres">
-
+                    <span>IN EVIDENZA</span>
+                    <span>PODCAST</span>
+                    <span>CLASSIFICHE</span>
+                    <span>GENERI E MOOD</span>
+                    <span>NUOVE USCITE</span>
+                    <span>SCOPRI</span>
                 </div>
 
                 <div id="content">
