--- a/index.html
+++ b/index.html
@@ -11,7 +11,39 @@
         <div id="wrapper">
 
             <div id="menu">
-    
+                <div id="logo-box">
+                    <img src="img/logo.svg" alt="">
+                    <div id="menu-list">
+                        <nav>
+                            <ul>
+                                <li><a href="">Home</a></li>
+                                <li><a href="">Cerca</a></li>
+                                <li><a href="">La tua libreria</a></li>
+                            </ul>
+                        </nav>
+                        <div id="playlist">
+                            <h5>PLAYLIST</h5>
+                            <nav>
+                                <ul>
+                                    <li>Crea Playlist</li>
+                                    <li>Nome playlist</li>
+                                    <li>Nome playlist</li>
+                                    <li>Nome playlist</li>
+                                    <li>Nome playlist</li>
+                                    <li>Nome playlist</li>
+                                    <li>Nome playlist</li>
+                                    <li>Nome playlist</li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                
+                <div id="profile-area">
+                    <a href="">Installa app</a>
+                    <hr>
+                    <a href="">Jhon Doe</a>
+                </div>
             </div>
 
             <div id="main">
