--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
     <footer>
         <div id="footer-container">
             <div id="left">
-
+                <img src="img/sinister.jpeg" alt="sinister">
+                <div>
+                    <h6>Sinister</h6>
+                    <span>Brano Nome</span>
+                </div>
             </div>
 
             <div id="mid">
