inserisci icone e font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Spotify</title>
 </head>
@@ -12,13 +13,14 @@
 
             <div id="menu">
                 <div id="logo-box">
-                    <img src="img/logo.svg" alt="">
-                    <div id="menu-list">
+                    <img src="img/logo.svg" alt="" id="big-logo">
+                </div>
+                 <div id="menu-list">
                         <nav>
                             <ul>
-                                <li><a href="">Home</a></li>
-                                <li><a href="">Cerca</a></li>
-                                <li><a href="">La tua libreria</a></li>
+                                <li><a href=""><img src="img/home.svg" alt="home">Home</a></li>
+                                <li><a href=""><img src="img/search.svg" alt="search">Cerca</a></li>
+                                <li><a href=""><img src="img/libreria.svg" alt="">La tua libreria</a></li>
                             </ul>
                         </nav>
                         <div id="playlist">
@@ -37,7 +39,6 @@
                             </nav>
                         </div>
                     </div>
-                </div>
                 
                 <div id="profile-area">
                     <a href="">Installa app</a>
