--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 </div>
 
                 <div id="genres">
-                    <span>IN EVIDENZA</span>
-                    <span>PODCAST</span>
-                    <span>CLASSIFICHE</span>
-                    <span>GENERI E MOOD</span>
-                    <span>NUOVE USCITE</span>
-                    <span>SCOPRI</span>
+                    <span><a href="">IN EVIDENZA</a></span>
+                    <span><a href="">PODCAST</a></span>
+                    <span><a href="">CLASSIFICHE</a></span>
+                    <span><a href="">GENERI E MOOD</a></span>
+                    <span><a href="">NUOVE USCITE</a></span>
+                    <span><a href="">SCOPRI</a></span>
                 </div>
 
                 <div id="content">
@@ -73,63 +73,63 @@
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
+                                    <img src="img/stranger.jpeg" alt="">
+                                    <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
+                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <h4>A quiet place</h4>
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
+                                    <img src="img/split.jpeg" alt="">
+                                    <h4>Split</h4>
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
+                                    <img src="img/cure.jpeg" alt="">
+                                    <h4>A cure for wellnes</h4>
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
-                                    <span>Subtitle</span>
-                                </div>
-                            </div>
-                        </div>    
-                    </section>
-                    <!--sezione Recently Played-->
-                    <section>
-                        <h3>Recently played</h3>
-                        <div class="row">
-                            <div class="column">
-                                <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
-                                    <span>Subtitle</span>
-                                </div>
-                                <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <h4>heavy Metal</h4>
+                                    <img src="img/sinister.jpeg" alt="">
+                                    <h4>Sinister</h4>
                                     <span>Subtitle</span>
                                 </div>
                             </div>
                         </div>    
                     </section>
-                    <!--sezione Recently Played-->
+                    <!--sezione Creato per-->
                     <section>
-                        <h3>Recently played</h3>
+                        <h3>Creato per John Doe</h3>
+                        <span>Più ascolti, più accurati saranno i suggerimenti</span>
                         <div class="row">
                             <div class="column">
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <img src="img/radar.jpeg" alt="">
+                                    <h4>Release Radar</h4>
+                                </div>
+                                <div class="card">
+                                    <img src="img/mixdaily.jpeg" alt="">
+                                    <h4>Daily mix 1</h4>
+                                </div>
+                            </div>
+                        </div>    
+                    </section>
+                    <!--sezione Artisti più popolari-->
+                    <section>
+                        <h3>Artisti più popolari</h3>
+                        <span>Più ascolti, più accurati saranno i suggerimenti</span>
+                        <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <img src="img/youg.jpeg" alt="">
                                     <h4>heavy Metal</h4>
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <img src="img/einaudi.jpeg" alt="">
                                     <h4>heavy Metal</h4>
                                     <span>Subtitle</span>
                                 </div>
