migliora menu laterale

--- a/index.html
+++ b/index.html
@@ -13,37 +13,38 @@
             <div id="menu">
                 <div id="logo-box">
                     <img src="img/logo.svg" alt="" id="big-logo">
-                </div>
-                <div id="menu-list">
-                    <nav>
-                        <ul>
-                            <li><a href=""><img src="img/home.svg" alt="home">Home</a></li>
-                            <li class="gray-text"><a href="" class="gray-text"><img src="img/search.svg" alt="search">Cerca</a>
-                            </li>
-                            <li><a href="" class="gray-text"><img src="img/libreria.svg" alt="">La tua libreria</a></li>
-                        </ul>
-                    </nav>
-                    <div id="playlist">
-                        <h5>PLAYLIST</h5>
+                    <div id="menu-list">
                         <nav>
-                            <ul class="gray-text">
-                                <li>Crea Playlist</li>
-                                <li>Nome playlist</li>
-                                <li>Nome playlist</li>
-                                <li>Nome playlist</li>
-                                <li>Nome playlist</li>
-                                <li>Nome playlist</li>
-                                <li>Nome playlist</li>
-                                <li>Nome playlist</li>
+                            <ul>
+                                <li><a href=""><img src="img/home.svg" alt="home">Home</a></li>
+                                <li class="gray-text"><a href="" class="gray-text"><img src="img/search.svg"
+                                            alt="search">Cerca</a>
+                                </li>
+                                <li><a href="" class="gray-text"><img src="img/libreria.svg" alt="">La tua libreria</a></li>
                             </ul>
                         </nav>
+                        <div id="playlist">
+                            <h5>PLAYLIST</h5>
+                            <nav>
+                                <ul class="gray-text">
+                                    <li><a href=""><i class="fa-solid fa-plus" id="plus-icon"></i>Crea Playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href="">Nome playlist</a></li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
-            
                 </div>
+                
                 <div id="profile-area">
                     <a href="" class="gray-text"><img src="img/download.svg" alt="" class="gray-text">Installa app</a>
                     <hr class="gray-text">
-                    <a href="" class="gray-text"><img src="img/profile.svg" alt="" class="gray-text">Jhon Doe</a>
+                    <a href="" class="gray-text"><img src="img/profile.svg" alt="" class="gray-text" id="circle">Jhon Doe</a>
                 </div>
             </div>
 
