contenitore immagini rotondo

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <!--sezione Creato per-->
                     <section>
                         <h3>Creato per John Doe</h3>
-                        <span>Più ascolti, più accurati saranno i suggerimenti</span>
+                        <span class="gray-text">Più ascolti, più accurati saranno i suggerimenti</span>
                         <div class="row">
                             <div class="column">
                                 <div class="card">
@@ -126,16 +126,16 @@
                     <!--sezione Artisti più popolari-->
                     <section>
                         <h3>Artisti più popolari</h3>
-                        <span>Più ascolti, più accurati saranno i suggerimenti</span>
+                        <span class="gray-text">Più ascolti, più accurati saranno i suggerimenti</span>
                         <div class="row">
                             <div class="column">
                                 <div class="card">
-                                    <img src="img/youg.jpeg" alt="">
+                                    <img src="img/youg.jpeg" alt="" class="round-box">
                                     <h4>heavy Metal</h4>
                                     <span>Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/einaudi.jpeg" alt="">
+                                    <img src="img/einaudi.jpeg" alt="" class="round-box">
                                     <h4>heavy Metal</h4>
                                     <span>Subtitle</span>
                                 </div>
