media queries extra small (cxomportamento menu laterale)

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                     <div id="menu-list">
                         <nav>
                             <ul>
-                                <li><a href=""><img src="img/home.svg" alt="home">Home</a></li>
+                                <li><a href=""><img src="img/home.svg" alt="home"><span class="hide-text">Home</span></a></li>
                                 <li class="gray-text"><a href="" class="gray-text"><img src="img/search.svg"
-                                            alt="search">Cerca</a>
+                                            alt="search"> <span class="hide-text">Cerca</span></a>
                                 </li>
-                                <li><a href="" class="gray-text"><img src="img/libreria.svg" alt="">La tua libreria</a></li>
+                                <li><a href="" class="gray-text"><img src="img/libreria.svg" alt=""><span class="hide-text">La tua libreria</span></a></li>
                             </ul>
                         </nav>
                         <div id="playlist">
-                            <h5>PLAYLIST</h5>
+                            <h5 class="hide-text">PLAYLIST</h5>
                             <nav>
                                 <ul class="gray-text">
-                                    <li><a href=""><i class="fa-solid fa-plus" id="plus-icon"></i>Crea Playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
-                                    <li><a href="">Nome playlist</a></li>
+                                    <li><a href=""><i class="fa-solid fa-plus" id="plus-icon"></i><span class="hide-text">Crea Playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
+                                    <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -47,9 +47,9 @@
                 </div>
                 
                 <div id="profile-area">
-                    <a href="" class="gray-text"><img src="img/download.svg" alt="" class="gray-text">Installa app</a>
-                    <hr class="gray-text">
-                    <a href="" class="gray-text"><img src="img/profile.svg" alt="" class="gray-text" id="circle">Jhon Doe</a>
+                    <a href="" class="gray-text"><img src="img/download.svg" alt="" class="gray-text"><span class="hide-text">Installa app</span></a>
+                    <hr class="gray-text hide-text">
+                    <a href="" class="gray-text"><img src="img/profile.svg" alt="" class="gray-text" id="circle"><span class="hide-text">Jhon Doe</span></a>
                 </div>
             </div>
 
