migliora queries extra small

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div id="menu">
                 <div id="logo-box">
                     <img src="img/logo.svg" alt="" id="big-logo">
+                    <img src="img/logo-small.svg" alt="small-logo" id="small-logo">
                     <div id="menu-list">
                         <nav>
                             <ul>
@@ -32,7 +33,7 @@
                             <h5 class="hide-text">PLAYLIST</h5>
                             <nav>
                                 <ul class="gray-text">
-                                    <li><a href=""><i class="fa-solid fa-plus" id="plus-icon"></i><span class="hide-text">Crea Playlist</span></a></li>
+                                    <li class="hide-text"><a href=""><i class="fa-solid fa-plus" id="plus-icon" ></i><span class="hide-text">Crea Playlist</span></a></li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
