migliora menu laterale

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 
                 <div id="profile-area">
                     <a href="" class="gray-text"><img src="img/download.svg" alt="" class="gray-text"><span class="hide-text">Installa app</span></a>
-                    <hr class="gray-text hide-text">
+                    <hr class="gray-text hide-text" id="main-hr">
                     <a href="" class="gray-text"><img src="img/profile.svg" alt="" class="gray-text" id="circle"><span class="hide-text">Jhon Doe</span></a>
                 </div>
             </div>
