migliora sezione call to action (bootone)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div id="genres">
-                    <span><a href="" class="gray-text">IN EVIDENZA</a></span>
+                    <span id="green-border"><a href="" class="gray-text">IN EVIDENZA</a></span>
                     <span><a href="" class="gray-text">PODCAST</a></span>
                     <span><a href="" class="gray-text">CLASSIFICHE</a></span>
                     <span><a href="" class="gray-text">GENERI E MOOD</a></span>
