inserisci icona play per hover cards

--- a/index.html
+++ b/index.html
@@ -76,31 +76,37 @@
                             <div class="column">
                                 <div class="card">
                                     <img src="img/metal_lifting.jpg" alt="">
+                                    <i class="fa-solid fa-circle-play hover-play"></i>
                                     <h4>heavy Metal</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
                                     <img src="img/stranger.jpeg" alt="">
+                                    <i class="fa-solid fa-circle-play hover-play"></i>
                                     <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
                                     <span class="gray-text">Kyle Dixon & Michael Stein</span>
                                 </div>
                                 <div class="card">
                                     <img src="img/aquietplace.jpeg" alt="">
+                                    <i class="fa-solid fa-circle-play hover-play"></i>
                                     <h4>A quiet place</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
                                     <img src="img/split.jpeg" alt="">
+                                    <i class="fa-solid fa-circle-play hover-play"></i>
                                     <h4>Split</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
                                     <img src="img/cure.jpeg" alt="">
+                                    <i class="fa-solid fa-circle-play hover-play"></i>
                                     <h4>A cure for wellnes</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
                                     <img src="img/sinister.jpeg" alt="">
+                                    <i class="fa-solid fa-circle-play hover-play"></i>
                                     <h4>Sinister</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
