--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
                 <div id="track">
-                    <span>0:25</span><hr>
+                    <span>0:25</span>
+                    <div id="inner-track"></div>
+                    <span>4:35</span>
                 </div>
             </div>
 
@@ -183,6 +185,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-low"></i>
+                <div id="small-track"></div>
             </div>
         </div>
 
