aggiungi scurimento immagini quando in hover

--- a/index.html
+++ b/index.html
@@ -75,38 +75,56 @@
                         <div class="row">
                             <div class="column">
                                 <div class="card">
-                                    <img src="img/metal_lifting.jpg" alt="">
-                                    <i class="fa-solid fa-circle-play hover-play"></i>
+                                    <div class="card-pics">
+                                        <img src="img/metal_lifting.jpg" alt="">
+                                        <div class="black-back"></div>
+                                        <i class="fa-solid fa-circle-play hover-play"></i>
+                                    </div>
                                     <h4>heavy Metal</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/stranger.jpeg" alt="">
-                                    <i class="fa-solid fa-circle-play hover-play"></i>
+                                    <div class="card-pics">
+                                        <img src="img/stranger.jpeg" alt="">
+                                        <div class="black-back"></div>
+                                        <i class="fa-solid fa-circle-play hover-play"></i>
+                                    </div>
                                     <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
                                     <span class="gray-text">Kyle Dixon & Michael Stein</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/aquietplace.jpeg" alt="">
-                                    <i class="fa-solid fa-circle-play hover-play"></i>
+                                    <div class="card-pics">
+                                        <img src="img/aquietplace.jpeg" alt="">
+                                        <div class="black-back"></div>
+                                        <i class="fa-solid fa-circle-play hover-play"></i>
+                                    </div>
                                     <h4>A quiet place</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/split.jpeg" alt="">
-                                    <i class="fa-solid fa-circle-play hover-play"></i>
+                                    <div class="card-pics">
+                                        <img src="img/split.jpeg" alt="">
+                                        <div class="black-back"></div>
+                                        <i class="fa-solid fa-circle-play hover-play"></i>
+                                    </div>
                                     <h4>Split</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/cure.jpeg" alt="">
-                                    <i class="fa-solid fa-circle-play hover-play"></i>
+                                    <div class="card-pics">
+                                        <img src="img/cure.jpeg" alt="">
+                                        <div class="black-back"></div>
+                                        <i class="fa-solid fa-circle-play hover-play"></i>
+                                    </div>
                                     <h4>A cure for wellnes</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
                                 <div class="card">
-                                    <img src="img/sinister.jpeg" alt="">
-                                    <i class="fa-solid fa-circle-play hover-play"></i>
+                                    <div class="card-pics">
+                                        <img src="img/sinister.jpeg" alt="">
+                                        <div class="black-back"></div>
+                                        <i class="fa-solid fa-circle-play hover-play"></i>
+                                    </div>
                                     <h4>Sinister</h4>
                                     <span class="gray-text">Subtitle</span>
                                 </div>
