refattoring profile area

--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                 </div>
                 
                 <div id="profile-area">
-                    <a href="" class="gray-text"><img src="img/download.svg" alt="" class="gray-text"><span class="hide-text">Installa app</span></a>
+                    <div>
+                        <a href="" class="gray-text"><img src="img/download.svg" alt="" class="gray-text" id="install-btn"><span class="hide-text">Installa app</span></a>
+                    </div>
                     <hr class="gray-text hide-text" id="main-hr">
-                    <a href="" class="gray-text"><img src="img/profile.svg" alt="" class="gray-text" id="circle"><span class="hide-text">Jhon Doe</span></a>
+                    <div>
+                        <a href=""><img src="img/profile.svg" alt="" class="gray-text" id="circle"><span class="hide-text">Jhon Doe</span></a>
+                    </div>
                 </div>
             </div>
 
