aggiungi progressione traccia/ livello volume

--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
                 </div>
                 <div id="track">
                     <span>0:25</span>
-                    <div id="inner-track"></div>
+                    <div id="inner-track">
+                        <div class="inner-progression"></div>
+                    </div>
                     <span>4:35</span>
                 </div>
             </div>
@@ -207,7 +209,9 @@
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-low"></i>
-                <div id="small-track"></div>
+                <div id="small-track">
+                    <div class="inner-progression"></div>
+                </div>
             </div>
         </div>
 
