inserisci pallino indicatore in traccia e volume

--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
                 <div id="track">
                     <span>0:25</span>
                     <div id="inner-track">
-                        <div class="inner-progression"></div>
+                        <div class="inner-progression">
+                            <div class="marker"></div>
+                        </div>
+                        
                     </div>
                     <span>4:35</span>
                 </div>
@@ -210,7 +213,9 @@
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-low"></i>
                 <div id="small-track">
-                    <div class="inner-progression"></div>
+                    <div class="inner-progression">
+                        <div class="marker"></div>
+                    </div>
                 </div>
             </div>
         </div>
