aggiungi altri hover nel footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div id="footer-icons">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-solid fa-circle-play"></i>
+                    <i class="fa-solid fa-circle-play" id="footer-play"></i>
                     <i class="fa-solid fa-forward"></i>
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
