crea simbolo + per "crea playlist"

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
                             <h5 class="hide-text">PLAYLIST</h5>
                             <nav>
                                 <ul class="gray-text">
-                                    <li class="hide-text"><a href=""><i class="fa-solid fa-plus" id="plus-icon" ></i><span class="hide-text">Crea Playlist</span></a></li>
+                                    <li class="hide-text">
+                                            <div id="plus-row-wrapper">
+                                                <div id="plus-wrapper">
+                                                    <a href=""><i class="fa-solid fa-plus" id="plus-icon"></a></i>
+                                                </div>
+                                                <span class="hide-text">Crea Playlist</span>
+                            
+                                        </a></div>
+                                    </li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
@@ -153,7 +161,7 @@
                         </div>    
                     </section>
                     <!--sezione Artisti più popolari-->
-                    <section>
+                    <section id="popular">
                         <h3>Artisti più popolari</h3>
                         <span class="gray-text">Più ascolti, più accurati saranno i suggerimenti</span>
                         <div class="row">
