inizializza bordo verde a icona home

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div id="menu-list">
                         <nav>
                             <ul>
-                                <li><a href=""><img src="img/home.svg" alt="home"><span class="hide-text">Home</span></a></li>
+                                <li id="home-btn"><a href=""><img src="img/home.svg" alt="home"><span class="hide-text">Home</span></a></li>
                                 <li class="gray-text"><a href="" class="gray-text"><img src="img/search.svg"
                                             alt="search"> <span class="hide-text">Cerca</span></a>
                                 </li>
