migliora alcune icone

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <span class="gray-text">Brano Nome</span>
                 </div>
                 <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-folder"></i>
+                <i class="fa-regular fa-folder"></i>
             </div>
 
             <div id="mid">
