inserisci hover a "Brano Nome"

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <img src="img/sinister.jpeg" alt="sinister">
                 <div>
                     <h2>Sinister</h2>
-                    <span class="gray-text">Brano Nome</span>
+                    <a href=""><span class="gray-text">Brano Nome</span></a>
                 </div>
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-regular fa-folder"></i>
