risolvi problemi restringimento footer

--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@
                     <h2>Sinister</h2>
                     <a href=""><span class="gray-text">Brano Nome</span></a>
                 </div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-folder"></i>
+                <div id="small-icons">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
             </div>
 
             <div id="mid">
