refactoring tasto play footer

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
                 <div id="footer-icons">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-solid fa-circle-play" id="footer-play"></i>
+                    <div id="play-circle">
+                        <i class="fa-solid fa-play" id="footer-play"></i>
+                    </div>
                     <i class="fa-solid fa-forward"></i>
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
