risolvi errori di validazione in html

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                                     <li class="hide-text">
                                             <div id="plus-row-wrapper">
                                                 <div id="plus-wrapper">
-                                                    <a href=""><i class="fa-solid fa-plus" id="plus-icon"></a></i>
+                                                    <a href=""><i class="fa-solid fa-plus" id="plus-icon"></i></a>
                                                 </div>
                                                 <span class="hide-text">Crea Playlist</span>
                             
-                                        </a></div>
+                                        </div>
                                     </li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
                                     <li><a href=""><span class="hide-text">Nome playlist</span></a></li>
