refactor bordi verdi (home e in evidenza)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
 
                 <div id="genres">
-                    <span id="green-border"><a href="" class="gray-text">IN EVIDENZA</a></span>
+                    <a href="" class="gray-text">IN EVIDENZA</a><div id="green-border"></div>
                     <span><a href="" class="gray-text">PODCAST</a></span>
                     <span><a href="" class="gray-text">CLASSIFICHE</a></span>
                     <span><a href="" class="gray-text">GENERI E MOOD</a></span>
